# ZMachineExplorer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ZMachineExplorer.pro
src/: tst_zmachinememory.cpp
src/TestSources/: CMakeLists.txt  helloworld.inf  test.inf
src/ZMachineCore/: CMakeLists.txt  ZMachineCore.pro  ZMachineCore_global.h  enums.h  unhandledopcodeexception.cpp  unhandledopcodeexception.h  zmachinememory.cpp  zmachinememory.h  zmachinevm.cpp  zmachinevm.h  zmachinevm_instructions.cpp  zobject.cpp  zobject.h
src/ZMachineCoreTests/: CMakeLists.txt  ZMachineCoreTests.pro  testdata.qrc  tst_parsestoryfileheader.cpp  tst_zmachinecore.cpp
src/ZMachineCoreTests/testdata/: test.z5
src/ZMachineExplorer/: CMakeLists.txt  ZMachineExplorer.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  recentfilesmanager.cpp  recentfilesmanager.h
